--- a/ExculsivePrefixSum/ExculsivePrefixSum.vcxproj
+++ b/ExculsivePrefixSum/ExculsivePrefixSum.vcxproj
@@ -126,6 +126,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Downloads\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="functions.cu" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 9.2.targets" />
