--- a/ExculsivePrefixSum/ExculsivePrefixSum.vcxproj.filters
+++ b/ExculsivePrefixSum/ExculsivePrefixSum.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="functions.cu">
+      <Filter>Source Files</Filter>
+    </CudaCompile>
+  </ItemGroup>
 </Project>
