--- a/ExculsivePrefixSum/ExculsivePrefixSum.vcxproj
+++ b/ExculsivePrefixSum/ExculsivePrefixSum.vcxproj
@@ -124,7 +124,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\main.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="functions.cu" />
